# flashSourceMap

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json
.cursor/: rules.md
.github/workflows/: release-desktop.yml  release.yml
.trellis/spec/backend/: index.md  platform-runtime-contracts.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/workspace/chenjiachun/: index.md  journal-1.md
apps/saveData-desktop/: README.md
apps/saveData-desktop/main/: main.ts
decompiled/ffdec/L4399Main_gamefile/as3/scripts/: Main.as  PayMoneyVar.as  chushihua.as  dsfcz.as  fengmian.as  jiazaijiemian.as  kaichanmanhua.as  mp3kaichang.as  mp_anniua.as  mp_chupenga.as  oTs_m.as  waring_cundyic.as  waring_doukai.as  waring_lianjieshibai.as  waring_ltyitui.as  waring_zoubi.as  waring_zoubib.as  xiaojiazaijiemian.as
decompiled/ffdec/L4399Main_gamefile/pcode/scripts/: Main.pcode  PayMoneyVar.pcode  chushihua.pcode  dsfcz.pcode  fengmian.pcode  jiazaijiemian.pcode  kaichanmanhua.pcode  mp3kaichang.pcode  mp_anniua.pcode  mp_chupenga.pcode  oTs_m.pcode  waring_cundyic.pcode  waring_doukai.pcode  waring_lianjieshibai.pcode  waring_ltyitui.pcode  waring_zoubi.pcode  waring_zoubib.pcode  xiaojiazaijiemian.pcode
decompiled/ffdec/xfbbv451/as3/scripts/: Decryption.as  L4399Main.as  L4399Main_gamefile.as  PayMoneyVar.as  _CompiledResourceBundleInfo.as  _L4399Main_Styles.as  en_US$core_properties.as  (+4 more)
doc/: global-staff-dashboard.md  online-mode-global-service.md  union-api.md
downloads/pages/: iframe-jjxzfcms.html  page-115225_2.html
extracted/swf/: define-binary-1.swf
native/cef-host/: CMakeLists.txt  README.md
native/cef-host/src/: main_win.cc  native_app.cc  native_app.h  native_handler.cc  native_handler.h
native/package-launcher/: README.md
native/package-launcher/src/: main_win.cc
runtime/global-data/: README.md  types.ts
runtime/global-data/commands/: settleArenaSeason.ts
runtime/global-data/deploy/: flash-global-data.service.example
runtime/global-data/persistence/: db.ts
runtime/global-data/public/: staff.css  staff.html  staff.js
runtime/global-data/rank/: arenaExtra.ts  protocol.ts  service.ts
runtime/global-data/schema/: global-data.sql
runtime/global-data/server/: server.ts
runtime/global-data/tests/: global-data.test.ts
runtime/save-data/: README.md
runtime/save-data/persistence/: db.ts  legacyJsonDb.ts  store.ts
runtime/save-data/platform4399/: mockApi.ts  onlineSave.ts
runtime/save-data/public/: index.html  mock-platform.js  native-player.js  native.html  runner.js  style.css
runtime/save-data/schema/: local-save.sql
runtime/save-data/server/: logger.ts  paths.ts  server.ts
runtime/save-data/services/: gameData.ts  levelRewards.ts  onlineMode.ts  union.ts  zodiacSoulExp.ts
runtime/save-data/tests/: db-flow.test.ts  online-mode.test.ts  online-routing.test.ts  online-save.test.ts
src/shared/: paths.ts
src/swf/: bagItemSenderPatch.ts  crossSwfEventPatch.ts  fontAlias.ts  payEventPatch.ts  solarPetPatch.ts  strengtheningPatch.ts  swf.ts  unionListPatch.ts  zodiacSoulExpPatch.ts
src/tools/: downloadOriginals.ts  extractInnerSwf.ts
tools/: README.md  build-native-cef-host.ps1  build-native-package-launcher.ps1  decompile.sh  inspect-abc-references.cjs  launch-native-flash-mock.cjs  package-native-flash.cjs  patch-pay-event-listener.cjs  patch-runtime-mock-bag.cjs
tools/levelLogic/: README.md
tools/noCheat/: README.md
tools/paymentLogic/: README.md
tools/pets/: pet-hatching-analysis.md
tools/saveData/: README.md
tools/saveData/packaging/: README.md
tools/saveData/public/: index.html  mock-platform.js  runner.js  style.css
tools/saveData/schema/: local-save.sql
tools/saveData/src/: db.ts  gameData.ts  logger.ts  mockApi.ts  paths.ts  server.ts  types.ts
tools/saveData/tests/: db-flow.test.ts
(+1360 files in other folders)
